--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   ],
   "require": {
     "php": ">=7.1",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "irazasyed/telegram-bot-sdk": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7"
